Fix spacing between center and footer

--- a/src/Footer.css
+++ b/src/Footer.css
@@ -90,6 +90,7 @@ svg:hover path {
   footer {
     width: 768px;
     align-items: start;
+    margin-top: 48px;
   }
 
   footer .founder-image {
